--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>The Booleaners</title>
 </head>
 <body>
 
     <!-- inizio header -->
     <header>
-
+        <img src="C:\Users\1999g\OneDrive\Documenti\Boolean\timberners\html-css-booleaner\img\logo.svg" alt="logo">
     </header>
     <!-- fine header -->
 
@@ -22,7 +23,7 @@
 
     <!-- inizio footer -->
     <footer>
-        
+
     </footer>
     <!-- fine footer -->
 
