--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
 
     <!-- inizio header -->
     <header>
-        <img src="C:\Users\1999g\OneDrive\Documenti\Boolean\timberners\html-css-booleaner\img\logo.svg" alt="logo">
+            <img src="C:\Users\1999g\OneDrive\Documenti\Boolean\timberners\html-css-booleaner\img\logo.svg" alt="logo">
     </header>
     <!-- fine header -->
 
     <!-- inizio main -->
     <main>
-
+        <div>
+            <h1>Internet deve essere al servizio del "bene pubblico": 
+                il manifesto di Tim Berners-Lee</h1>
+        </div>
     </main>
     <!-- fine main -->
 
