--- a/index.html
+++ b/index.html
@@ -11,16 +11,32 @@
 
     <!-- inizio header -->
     <header>
+        <div class="logo">
             <img src="C:\Users\1999g\OneDrive\Documenti\Boolean\timberners\html-css-booleaner\img\logo.svg" alt="logo">
-    </header>
+        </div>
+        </header>
     <!-- fine header -->
 
     <!-- inizio main -->
     <main>
-        <div>
+        <div class="inter">
             <h1>Internet deve essere al servizio del "bene pubblico": 
                 il manifesto di Tim Berners-Lee</h1>
         </div>
+
+        <div class="scritto">
+            <h2>Scritto da <span id="blue">The Booleaner</span> <span id="low">il 10/10/2020</span></h2>  
+        </div>
+
+        <div>
+            <img  src="C:\Users\1999g\OneDrive\Documenti\Boolean\timberners\html-css-booleaner\img\tim-1.jpg" alt="tim-1">
+            <img  src="C:\Users\1999g\OneDrive\Documenti\Boolean\timberners\html-css-booleaner\img\tim-2.jpg" alt="tim-2">
+            
+            <br>
+
+            <span>1st Photo : John S.and James L.Knight Foundation,by Scott Henrichsen</span>
+        </div>
+
     </main>
     <!-- fine main -->
 
