--- a/index.html
+++ b/index.html
@@ -41,11 +41,9 @@
             <span>2nd Photo : Wikipedia,by Paul Clarke</span>
         </div>
 
-        <br>
-
-        <div>
-             Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio esse aspernatur aperiam ex architecto asperiores amet, sequi consectetur aliquam maxime ea porro error nobis ab voluptatibus dicta cum, mollitia obcaecati.
-        </div>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus nostrum veniam amet, inventore incidunt distinctio minima soluta ipsa sed ducimus <span style="background-color: yellow;">totam iusto asperiores similique impedit expedita repellendus blanditiis iste iure.</span>  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores doloribus quo sequi ex fuga neque quis voluptatum delectus quasi velit sunt officiis, pariatur, voluptates dolorem veniam nostrum eius illum. Sapiente?
+        </p>
 
         <div>
             <ul>
@@ -63,7 +61,6 @@
 
         <br>
 
-        <div>
             <table>
                 <!-- Intestazione tabella -->
                 <thead>
@@ -76,21 +73,21 @@
                 <!-- Corpo tabella -->
                 <tbody>
                     <tr>
-                        <th>Lorem ipsum dolor</th>
-                        <th>Lorem ipsum dolor</th>
-                        <th>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eaque quas nobis, reiciendis necessitatibus officiis natus similique, deleniti nemo minus at quaerat odit cumque cum ex assumenda! Rem, rerum vitae.</th>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eaque quas nobis, reiciendis necessitatibus officiis natus similique</td>
                     </tr>
     
                     <tr>
-                        <th>Lorem ipsum dolor</th>
-                        <th>Lorem ipsum dolor</th>
-                        <th>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam odio molestias nobis ut sequi quidem quo unde, eaque vero vel possimus, saepe rerum repellendus nihil tenetur quaerat esse minima voluptates.</th>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eaque quas nobis, reiciendis necessitatibus officiis natus similique</td>
                     </tr>
                     
                     <tr>
-                        <th>Lorem ipsum dolor</th>
-                        <th>Lorem ipsum dolor</th>
-                        <th>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi natus temporibus, numquam sed at minima officia sequi ipsa. Totam consectetur id repellendus nostrum molestias pariatur numquam incidunt eius excepturi ea?</th>  
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eaque quas nobis, reiciendis necessitatibus officiis natus similique</td>
                     </tr>
                 </tbody>
                 <!-- Fine corpo tabella -->
@@ -100,7 +97,10 @@
                 </tfoot> -->
                 <!-- Risultato -->
             </table>
-        </div>
+
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime modi atque cum, doloribus cumque perferendis? Ducimus distinctio quisquam nisi quia accusamus ad in. Atque alias enim ut. Ipsam, cum quis. .Lorem ipsum dolor sit amet consectetur, <span style="background-color: yellow;" >adipisicing elit. Cumque deserunt laudantium vero quos expedita animi distinctio</span>, commodi iure perspiciatis doloremque, soluta dolorum voluptatem ipsum officiis labore dicta debitis. Rem, eaque.
+            </p>
     </main>
     <!-- fine main -->
 
