--- a/index.html
+++ b/index.html
@@ -101,9 +101,20 @@
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime modi atque cum, doloribus cumque perferendis? Ducimus distinctio quisquam nisi quia accusamus ad in. Atque alias enim ut. Ipsam, cum quis. .Lorem ipsum dolor sit amet consectetur, <span style="background-color: yellow;" >adipisicing elit. Cumque deserunt laudantium vero quos expedita animi distinctio</span>, commodi iure perspiciatis doloremque, soluta dolorum voluptatem ipsum officiis labore dicta debitis. Rem, eaque.
             </p>
+
+            <div class="interesse">
+                <h3>Potrebbero interessarti</h3>
+
+                <img src="C:\Users\1999g\OneDrive\Documenti\Boolean\timberners\html-css-booleaner\img\monitor.jpg" alt="monitor">
+
+                <br>
+
+                <img src="C:\Users\1999g\OneDrive\Documenti\Boolean\timberners\html-css-booleaner\img\graph.jpg" alt="grafico">
+            </div>
+            
     </main>
     <!-- fine main -->
-
+        
     <!-- inizio footer -->
     <footer>
 
